--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Asset Delivery Demo</string>
+    <string name="first_fragment_label">First Fragment</string>
 </resources>
